--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "aos": "^2.3.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.27.0",
     "swiper": "^11.1.14"
   },
   "devDependencies": {
